[lib][frontend] kinopoisk title added, movie page improved

--- a/css/template.css
+++ b/css/template.css
@@ -120,3 +120,8 @@ div.stretchy-wrapper > div {
     position: absolute;
     top: 0; bottom: 0; left: 0; right: 0;
 }
+
+.movDesc {
+    font-size: 24px;
+    color: #333;
+}
