--- a/css/template.css
+++ b/css/template.css
@@ -22,6 +22,18 @@ body {
     padding: 10px;
 }
 
+.movieTitle {
+    z-index: 2;
+    position:absolute;
+    background-color:black;
+    opacity: 0.8;
+    color: white;
+    width: 100%;
+    bottom: 0;
+    font-weight: bold;
+    font-size: 16px;
+}
+
 .movieInfo {
     z-index: 2;
     position:absolute;
