--- a/css/template.css
+++ b/css/template.css
@@ -8,18 +8,25 @@ body {
     text-align: center;
 }
 
-.movie {
-    position: relative;
-    display: inline-block;
-    width: 200px;
-    height: 317px;
-    margin: 5px;
+.navbar-inverse .navbar-brand {
+    font-size: 28px;
+    line-height: 30px;
+    padding: 10px 15px;
+    color: #AAA;
 }
 
 #userSettings {
     background-color: #eee;
     margin-bottom: 15px;
     padding: 10px;
+}
+
+.movie {
+    position: relative;
+    display: inline-block;
+    width: 200px;
+    height: 317px;
+    margin: 5px;
 }
 
 .movieTitle {
@@ -106,7 +113,6 @@ body {
 
 .bigPoster {
     width: 100%;
-    padding-right: 10px;
 }
 
 .delImg {
@@ -122,21 +128,19 @@ body {
     line-height: 20px;
 }
 
-div.stretchy-wrapper {
-	width: 100%;
-	padding-bottom: 56.25%; /* 16:9 */
-	position: relative;
-}
-
-div.stretchy-wrapper > div {
-    position: absolute;
-    top: 0; bottom: 0; left: 0; right: 0;
-}
-
 .movDesc {
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .movDescName {
     font-size: 18px;
+}
+
+#torrentTable {
+    font-size: 12px;
+}
+
+table.dataTable thead > tr > th {
+	padding-left: 8px;
+	padding-right: 16px;
 }
